# gist-dictionary

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  api_design.md
gist_dictionary/: __init__.py
src/: auth.py  basic.py  config.py  const.py  db.py  dict_manipulation.py  dictionary.py  entry.py  environment.py  gist.py  log.py  main.py  server.py  storage.py  utils.py
src/middleware/: auth.py
src/models/: dictionary.py  product.py  user.py
src/routes/: __init__.py  products.py  users.py
tools/: README.md  __init__.py  browser_tab_reader.py  browser_tab_reader_README.md  sample_usage.py
tools/anki_import/: README.md  __init__.py
tools/browser_tab_reader/: README.md  __init__.py  browser_tab_reader.html  browser_tab_reader.py  manifest.json  rules.json
tools/browser_tab_reader/assets/: i18n-metadata.json
tools/browser_tab_reader/html_version/: browser_tab_reader.html
tools/browser_tab_reader/html_version/css/: styles.css
tools/browser_tab_reader/html_version/js/: main.js
tools/browser_tab_reader/js/: browser_tab_reader.html  content.js
tools/browser_tab_reader/js/js/: i18n.js  main.js
tools/browser_tab_reader/python/: browser_tab_reader.py  dictionary_sites.txt
tools/csv_excel_converter/: README.md  __init__.py
tools/ocr_dictionary/: README.md  __init__.py  ocr_dictionary.py
